# rusty-fleet

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  README.md  SECURITY.md
.github/workflows/: ci.yml  deep-validation.yml
apps/fleet-console-wpf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RustyFleet.FleetConsole.csproj
apps/fleet-console-wpf.tests/: Program.cs  RustyFleet.FleetConsole.Tests.csproj
apps/fleet-console-wpf/Contracts/: FleetProjectionModels.cs  FleetProjectionValidation.cs
apps/fleet-console-wpf/Services/: FleetApiClient.cs
apps/fleet-console-wpf/ViewModels/: Commands.cs  DeviceViewModels.cs  FleetWorkspaceViewModel.cs
apps/fleet-hub-local/: Cargo.toml
apps/fleet-hub-local/src/: lib.rs  main.rs
apps/fleetctl/: Cargo.toml
apps/fleetctl/src/: lib.rs  main.rs
crates/fleet-contracts/: Cargo.toml
crates/fleet-contracts/src/: capability.rs  checkin.rs  command.rs  condition.rs  identity.rs  lib.rs  projection.rs  query.rs  stream.rs
crates/fleet-contracts/tests/: contracts.rs  fixtures.rs
crates/fleet-hub/: Cargo.toml
crates/fleet-hub/src/: lib.rs
crates/fleet-manifold-adapter/: Cargo.toml
crates/fleet-manifold-adapter/src/: lib.rs
crates/fleet-simulator/: Cargo.toml
crates/fleet-simulator/src/: lib.rs
docs/: ARCHITECTURE.md  DATASTREAMS.md  IMPLEMENTATION_PLAN.md  M0_GRAPH_AND_INSTRUCTION_REVIEW.md  M0_SOURCE_FOUNDATION.md  M1_CONSOLIDATION_READINESS.md  M1_LOCAL_MONITORING.md  OPERATOR_UI.md  PUBLIC_PRIVATE_BOUNDARY.md  VALIDATION.md  WORKFLOW.md
docs/decisions/: 0001-dedicated-fleet-product.md  0002-operator-information-architecture.md  0003-datastream-lifecycle-and-authority.md  0004-m0-source-boundary-and-threat-model.md  0005-m1-checkin-authority.md  0006-m1-local-ingress-threat-model.md
docs/research/: DATASTREAM_REFERENCE_LEDGER.md  FLEET_RESEARCH_INTEGRATION_REVIEW.md  FLEET_UI_PRODUCT_MATRIX.md  FLEET_UI_SOURCE_LEDGER.md  FLEET_UI_WIREFRAMES.md  MORPHOSPACE_DATASTREAM_MATRIX.md
fixtures/: README.md
fixtures/contracts/: checkin-claims.damaged.json  checkin-signing-vector.valid.json  device-observation.damaged.json  device-observation.valid.json  query.valid.json  saved-view.damaged.json  saved-view.valid.json  stream-descriptor.valid.json
fixtures/scenarios/: scale-and-damage.v1.json
morphospace/: .gitattributes  README.md  feature.lock.json  iteration-events.jsonl  project.spec.json  workspace.state.json
morphospace/iteration-units/: fleet-m0-foundation-and-simulator.json  fleet-m1-functional-closeout.json  fleet-m1-local-no-adb-monitoring.json  fleet-m1-readme-status-alignment.json  fleet-m1-status-validator-correction.json
morphospace/receipts/: fleet-m0-foundation-and-simulator-begin-validation.json  fleet-m0-foundation-and-simulator-claim.json  fleet-m0-foundation-and-simulator-standard-evidence.md  fleet-m0-foundation-and-simulator-standard-validation.json  fleet-m1-functional-closeout-begin-validation.json  fleet-m1-functional-closeout-standard-evidence.md  fleet-m1-functional-closeout-standard-validation.json  fleet-m1-readme-status-alignment-begin-validation.json  fleet-m1-readme-status-alignment-blocked-validation.json  fleet-m1-readme-status-alignment-blocker.md  fleet-m1-readme-status-alignment-claim.json  fleet-m1-status-validator-correction-begin-validation.json  fleet-m1-status-validator-correction-claim.json  fleet-m1-status-validator-correction-quick-evidence.md  fleet-m1-status-validator-correction-quick-validation.json
morphospace/receipts/transactions/: fleet-m0-foundation-and-simulator-accepted-0005-transition.completion.json  fleet-m0-foundation-and-simulator-accepted-0005-transition.intent.json  fleet-m0-foundation-and-simulator-claimed-0002-transition.completion.json  fleet-m0-foundation-and-simulator-claimed-0002-transition.intent.json  fleet-m0-foundation-and-simulator-ready-0001-transition.completion.json  fleet-m0-foundation-and-simulator-ready-0001-transition.intent.json  fleet-m0-foundation-and-simulator-validating-0003-transition.completion.json  fleet-m0-foundation-and-simulator-validating-0003-transition.intent.json  fleet-m0-foundation-and-simulator-validation-pass-0004-transition.completion.json  fleet-m0-foundation-and-simulator-validation-pass-0004-transition.intent.json  fleet-m1-functional-closeout-accepted-0011-transition.completion.json  fleet-m1-functional-closeout-accepted-0011-transition.intent.json  fleet-m1-functional-closeout-validating-0009-transition.completion.json  fleet-m1-functional-closeout-validating-0009-transition.intent.json  fleet-m1-functional-closeout-validation-pass-0010-transition.completion.json  fleet-m1-functional-closeout-validation-pass-0010-transition.intent.json  fleet-m1-local-no-adb-monitoring-claimed-0007-transition.completion.json  fleet-m1-local-no-adb-monitoring-claimed-0007-transition.intent.json  fleet-m1-local-no-adb-monitoring-ready-0006-transition.completion.json  fleet-m1-local-no-adb-monitoring-ready-0006-transition.intent.json  fleet-m1-readme-status-alignment-claimed-0013-transition.completion.json  fleet-m1-readme-status-alignment-claimed-0013-transition.intent.json  fleet-m1-readme-status-alignment-ready-0012-transition.completion.json  fleet-m1-readme-status-alignment-ready-0012-transition.intent.json  fleet-m1-readme-status-alignment-validating-0014-transition.completion.json  fleet-m1-readme-status-alignment-validating-0014-transition.intent.json  fleet-m1-readme-status-alignment-validation-blocked-0015-transition.completion.json  fleet-m1-readme-status-alignment-validation-blocked-0015-transition.intent.json  (+10 more)
schemas/: README.md  rusty.fleet.checkin_claims.v1.schema.json  rusty.fleet.checkin_signing_vector.v1.schema.json  rusty.fleet.device_observation.v1.schema.json  rusty.fleet.operation_ledger.v1.schema.json  rusty.fleet.operator_projection.v1.schema.json  rusty.fleet.query.v1.schema.json  rusty.fleet.signed_checkin.v1.schema.json  rusty.fleet.stream_descriptor.v1.schema.json
tools/: Test-Repo.ps1
