[workspace]
members = [
    "apps/fleetctl",
    "crates/fleet-contracts",
    "crates/fleet-hub",
    "crates/fleet-simulator",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "AGPL-3.0-or-later"
repository = "https://github.com/MesmerPrism/rusty-fleet"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
