[package]
name = "fleet-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Versioned source-only contracts for Rusty Fleet."

[dependencies]
serde.workspace = true
serde_jcs.workspace = true
serde_json.workspace = true

[lints]
workspace = true
