[package]
name = "fleet-simulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic source-only Rusty Fleet scenario generator."

[dependencies]
fleet-contracts = { path = "../fleet-contracts" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
